<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/productHint"
        android:id="@+id/productName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/productPriceHint"
        android:inputType="numberDecimal"
        android:id="@+id/productPrice" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productQuantity"
        android:inputType="number"
        android:hint="@string/productQuantityHint"
        android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/imageSelected"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Image"
        android:id="@+id/uploadImageButtonAddProduct"
        android:onClick="btnImageOnClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButtonAddProduct"
        android:onClick="onClickSubmit" />

</LinearLayout>