<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/nametitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="9dp"
                android:layout_weight="1.44"
                android:text="New Text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/pricetitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="$1000.00"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:text="@string/availabletitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productAvailable"
                android:layout_width="48dp"
                android:layout_weight="0.20"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="35"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="0.28"
        android:orientation="vertical"
        android:padding="5dp">


        <Button
            android:id="@+id/listItemButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/sale" />
    </RelativeLayout>

</LinearLayout>