<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Product Name"
        android:id="@+id/productName"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_weight="0.13"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".5"
            android:paddingLeft="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/textViewPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:layout_marginRight="8dp"
            android:id="@+id/productPrice1"
            android:textSize="18sp"
            />
        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgIcon"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:id="@+id/textViewAvailable"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Available"
            android:id="@+id/productQuantity"
            android:textSize="18sp"/>
            </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.56">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_quantities"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_alignParentTop="true" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/increment_quantity_button"
                android:onClick="incrementQuantity"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/order_quantity"
                android:layout_toEndOf="@+id/order_quantity" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/decrement_quantity_button"
                android:onClick="decrementQuantity"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/order_quantity"
                android:layout_toStartOf="@+id/order_quantity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:id="@+id/order_quantity"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderNow"
            android:layout_gravity="center_horizontal"
            android:text="@string/reorder"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickReorder" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickUpdate"
            android:id="@+id/update"
            android:layout_gravity="center_horizontal"
            android:text="Update"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDelete"
            android:id="@+id/delete"
            android:layout_gravity="center_horizontal"
            android:text="delete"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
</LinearLayout>